[package]
name = "gsmarena"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "API interface for GSMArena"
repository = "https://github.com/KenanBouvier/gsmarena"
readme = "README.md"
keywords = ["gsmarena", "api"]
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.18", features=["blocking"]}
scraper = "0.17.1"
serde = {version = "1.0.164", features=["derive"]}
serde_json = "1.0"
